Code cleanup.
Remove unused code, change anonymous classes to lambdas, apply
annotations for some warnings. Eliminate many warning messages where
it is sensible and does not detract from understanding of the code.